Fix(#40) :  이슈 닫기 오류 수정 , 예외 처리 추가
MappedCollection 타입을 Set으로 변경해 해결
이미 닫힌 이슈거나 , 존재하지 않는 이유일 때 400 에러를 응답

--- a/be/issue_tracker/src/main/resources/application.yml
+++ b/be/issue_tracker/src/main/resources/application.yml
@@ -4,9 +4,9 @@ spring:
   profiles:
     active: dev
 
-#logging:
-#  level:
-#    org.springframework.jdbc.core: DEBUG
+logging:
+  level:
+    org.springframework.jdbc.core: DEBUG
 
 ---
 
