chore : 테스트 프로파일 설정 수정

--- a/be/issue_tracker/src/test/resources/application.yml
+++ b/be/issue_tracker/src/test/resources/application.yml
@@ -7,3 +7,11 @@ spring:
 logging:
   level:
     org.springframework.jdbc.core: DEBUG
+
+---
+
+spring:
+    config:
+      activate:
+            on-profile: test
+      import: classpath:test-db-config.yml
