Test : RestAssured 이용한 인수 테스트 작성

--- a/be/issue_tracker/build.gradle
+++ b/be/issue_tracker/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     // Test
     testRuntimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'io.rest-assured:rest-assured'
 }
 
 tasks.named('test') {
