Feat(#51) JWT 로그인 구현
로그인 정보를 확인해, 인증에 성공한다면 JWT 토큰 발급
JWT 토큰을 포함한 요청으로부터 유저 ID 추출 성공

임시로 HTTP 헤더가 아닌 body text 사용하도록 작성

.

--- a/be/issue_tracker/.gitignore
+++ b/be/issue_tracker/.gitignore
@@ -1,6 +1,7 @@
 ### config ###
 /src/main/resources/db-config.yml
 /src/main/resources/test-db-config.yml
+/src/main/resources/jwt.yml
 
 ### build ###
 HELP.md
