--- a/be/issue_tracker/src/main/resources/application.yml
+++ b/be/issue_tracker/src/main/resources/application.yml
@@ -14,4 +14,4 @@ spring:
     config:
       activate:
             on-profile: dev
-      import: classpath:db-config.yml
+      import: classpath:db-config.yml, classpath:jwt.yml
