Chore : 테스트에 Jwt 설정 파일이 없어 발생하는 에러 해결

--- a/be/issue_tracker/.gitignore
+++ b/be/issue_tracker/.gitignore
@@ -2,6 +2,7 @@
 /src/main/resources/db-config.yml
 /src/main/resources/test-db-config.yml
 /src/main/resources/jwt.yml
+/src/test/resources/jwt.yml
 
 ### build ###
 HELP.md
