--- a/be/issue_tracker/src/test/resources/test-db-config.yml
+++ b/be/issue_tracker/src/test/resources/test-db-config.yml
@@ -1,12 +1,15 @@
- spring:
-   datasource:
+spring:
+  datasource:
     url: 'jdbc:h2:tcp://localhost/~/issue_test_db'
     username: 'sa'
     password: ''
     driver-class-name: 'org.h2.Driver'
 
-   sql:
-     init:
-       schema-locations: classpath:sql/ddl.sql
-       data-locations: classpath:sql/test.sql
-       mode: always
+  sql:
+    init:
+      schema-locations: classpath:sql/ddl.sql
+      data-locations: classpath:sql/test.sql
+      mode: always
+
+  config:
+    import: classpath:jwt.yml
